--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,10 +11,18 @@
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
   list-style: none;
-  line-height: 2;
   -webkit-tap-highlight-color: transparent;
 }
-
+button{
+  padding: 12px 8px; 
+  background: deepskyblue; 
+  color: #fff;
+  transition: all .2s ease-in-out;
+  cursor: pointer;
+  &:hover{
+    opacity: 0.8;
+  }
+}
 ::-webkit-scrollbar { display: none; }
 
 html {
