fix bugs in esc feat

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Oxanium&display=swap');
 *{
   font-family: 'Oxanium', sans-serif;
+  outline: none;
 }
 
 // *{
