--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 
 .player-viewport{
-    &.p-viewport-collapse{
+    &.p-viewport-collapsed{
         position: fixed;
         bottom: 0;
         left: 0;
@@ -10,13 +10,15 @@
     }
 }
 .player-wrapper{
-    &.p-wrapper-collapse{
+    &.p-wrapper-collapsed{
         cursor: pointer;
     
         position: relative;
         
         display: flex;
         justify-content: center;
+        flex-direction: column;
+        align-items: center;
     
         border-top: 2px transparent solid;
         border-bottom: 2px transparent solid;
@@ -68,4 +70,8 @@
 }
 .mdc-icon-button{
     color: $color;
+}
+.p-vol-wrapper{
+    width: 100%;
+    max-width: 950px;
 }
