--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -127,6 +127,10 @@
     width: 100%;
 
     z-index: -1;
+
+    & .p-single-wave{
+        background: rgba(66, 69, 73, 0.5);
+    }
 }
 #p-wave-container{
     height: 100%;
@@ -138,7 +142,6 @@
 }
 .p-single-wave{
     width: 16px;
-    background: rgba(66, 69, 73, 0.5);
     margin: 0 4px;
     transition: all .1s ease-in-out;
 }
@@ -151,6 +154,11 @@
     height: 350px;
     position: fixed;
     bottom: 0;
+    z-index: -1;
+
+    & .p-single-wave{
+        background: blue;
+    }
 }
 .p-expanded-top-bar-wrapper{
     width: 100%;
@@ -180,7 +188,6 @@
     flex: 1;
 }
 .p-expanded-controls{
-    flex: 1;
 }
 // ==============  MATERIAL DESIGN ================
 
