add generate color palette

--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -157,7 +157,7 @@
     z-index: -1;
 
     & .p-single-wave{
-        background: blue;
+        background: rgba(66, 69, 73, 0.2);
     }
 }
 .p-expanded-top-bar-wrapper{
