fix: added top bar animation to border color

--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -173,6 +173,7 @@
     justify-content: center;
 
     border-bottom: 5px solid transparent;
+    transition: all .8s ease-in-out;
 }
 .p-expanded-top-bar-container{
     padding: 8px 1.5rem;
