--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -11,7 +11,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgba(0,0,255,0.5);
 }
 
 // PLAYER COLLAPSED ================
@@ -32,6 +31,7 @@
     height: 60px;
     background: $content;
     .state-collapsed{
+        height: 60px;
         visibility: visible;
         opacity: 1;
     }
@@ -49,18 +49,33 @@
         height: 0px;
     }
     .state-expanded{
+        height: 100%;
         visibility: visible;
         opacity: 1;
     }
 }
 .state-collapsed{
     transition: all .3s ease-in-out;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 .state-expanded{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
     transition: all .3s ease-in-out;
+    
     height: 100%;
     display: flex;
     flex-direction: column;
+
+    overflow: hidden;
 }
 
 .player-wrapper{
