--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -61,6 +61,10 @@
     bottom: 0;
     left: 0;
     right: 0;
+
+    #p-wave-container{
+        height: 60px;
+    }
 }
 .state-expanded{
     position: fixed;
@@ -76,6 +80,10 @@
     flex-direction: column;
 
     overflow: hidden;
+
+    #p-wave-container{
+        height: 100%;
+    }
 }
 
 .player-wrapper{
@@ -169,7 +177,6 @@
     }
 }
 #p-wave-container{
-    height: 100%;
     width: 100%;
 
     display: flex;
