fix bug on prod

--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -47,6 +47,10 @@
         visibility: hidden;
         opacity: 0;
         height: 0px;
+
+        & .player-wrapper{
+            display: none;
+        }
     }
     .state-expanded{
         height: 100%;
