--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -12,84 +12,7 @@
     left: 0;
     right: 0;
 }
-
-// PLAYER COLLAPSED ================
-
-.player-viewport{
-    z-index: 4000;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    transition: all .3s ease-in-out;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-.p-viewport-collapsed{
-    height: 60px;
-    background: $content;
-    .state-collapsed{
-        height: 60px;
-        visibility: visible;
-        opacity: 1;
-    }
-    .state-expanded{
-        visibility: hidden;
-        opacity: 0;
-        height: 0px;
-    }
-}
-.p-viewport-expanded{
-    height: 100%;
-    .state-collapsed{
-        visibility: hidden;
-        opacity: 0;
-        height: 0px;
-
-        & .player-wrapper{
-            display: none;
-        }
-    }
-    .state-expanded{
-        height: 100%;
-        visibility: visible;
-        opacity: 1;
-    }
-}
-.state-collapsed{
-    transition: all .3s ease-in-out;
-    overflow: hidden;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    #p-wave-container{
-        height: 60px;
-    }
-}
-.state-expanded{
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    transition: all .3s ease-in-out;
-    
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-
-    overflow: hidden;
-
-    #p-wave-container{
-        height: 100%;
-    }
-}
-
+// STATE COLLAPSED ====================
 .player-wrapper{
     cursor: pointer;
 
@@ -324,6 +247,83 @@
 
     *{
         margin: 2px;
+    }
+}
+
+// PLAYER VIWEWPORT/WRAPPER ================
+
+.player-viewport{
+    z-index: 4000;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transition: all .3s ease-in-out;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+.p-viewport-collapsed{
+    height: 60px;
+    background: $content;
+    & .state-collapsed{
+        height: 60px;
+        visibility: visible;
+        opacity: 1;
+    }
+    & .state-expanded{
+        visibility: hidden;
+        opacity: 0;
+        height: 0px;
+    }
+}
+.p-viewport-expanded{
+    height: 100%;
+    & .state-collapsed{
+        visibility: hidden;
+        opacity: 0;
+        height: 0px;
+
+        & .player-wrapper{
+            display: none;
+        }
+    }
+    & .state-expanded{
+        height: 100%;
+        visibility: visible;
+        opacity: 1;
+    }
+}
+.state-collapsed{
+    transition: all .3s ease-in-out;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    #p-wave-container{
+        height: 60px;
+    }
+}
+.state-expanded{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    transition: all .3s ease-in-out;
+    
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    overflow: hidden;
+
+    #p-wave-container{
+        height: 100%;
     }
 }
 
