--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -3,14 +3,18 @@
 
 // BUTTERFLY ANIMATIOn ===============
 
-#butterfly-effect{
+#butterfly-effect-wrapper{
     width: 100%;
     height: 100%;
     position: fixed;
-    top: 0;
+
     bottom: 0;
-    left: 0;
     right: 0;
+    top: 0;
+    left: 0;
+}
+#butterfly-effect{
+    background: blue;
 }
 // STATE COLLAPSED ====================
 .player-wrapper{
