disable default pull to refresh

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,7 @@
 html, body{
   width: 100%;
   background: $background;
+  overscroll-behavior-y: contain;
 }
 .mdc-top-app-bar{
   background: $content;
