add possible fonts to steins gate logo

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,6 +20,12 @@
   padding: 3rem;
   width: 600px;
 }
+#steins-gate{
+  // font-family: 'Rock Salt', cursive;
+  // font-family: 'Damion', cursive;
+  font-family: 'Pacifico', cursive;
+
+}
 html, body{
   width: 100%;
   background: $background;
