--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,9 +1,10 @@
 .top-bar-wrapper{
-    background: #000000;
+    background: $content;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 12px 24px;
+    padding-bottom: 30px;
     *{
         color: $color;
     }
@@ -14,3 +15,34 @@
 .content{
     color: #fff;
 }
+
+#sg-main-name{
+    &::after{
+      content: "Soundtracks";
+      position: absolute;
+      font-size: 0.6em;
+      top: 100%;
+      left: 100%;
+      letter-spacing: 1px;
+      transform: translateX(-30%);
+      color: $content-lightness;
+      font-weight: normal;
+    }
+  }
+  .steins-gate{
+    font-size: 1.4em;
+    letter-spacing: 6px;
+  
+    // font-family: 'Rock Salt', cursive;
+    // font-family: 'Damion', cursive;
+    font-family: 'Righteous', cursive;
+    position: relative;
+  
+  }
+  .sg-main-letter{
+    text-align: center;
+    padding-left: 5px;
+    margin-right: 5px;
+     background: #fff;
+     color: #000;
+  }
