--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,10 +1,15 @@
+
+
+
+#sg-logo{
+  padding-bottom: 22px;
+}
 .top-bar-wrapper{
     background: $content;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 12px 24px;
-    padding-bottom: 30px;
     *{
         color: $color;
     }
@@ -27,6 +32,32 @@
       transform: translateX(-30%);
       color: $content-lightness;
       font-weight: normal;
+      transition: all .2s ease-in-out;
+      padding: 4px 2px;
+      border-bottom: 2px solid transparent;
+    }
+    &::before{
+      content: "";
+      position: absolute;
+
+      top: 100%;
+      left: 100%;
+
+      transform: translate(-30%, 24px);
+
+      transition: all .2s ease-in-out;
+      background: var(--mdc-theme-secondary);
+      
+      height: 2px;
+      width: 0px;
+    }
+    &:hover{
+      &::after{
+        color: $color;
+      }
+      &::before{
+        width: 100px;
+      }
     }
   }
   .steins-gate{
@@ -43,6 +74,6 @@
     text-align: center;
     padding-left: 5px;
     margin-right: 5px;
-     background: #fff;
+     background: var(--mdc-theme-secondary);
      color: #000;
   }
