added card music and card category - just a skeleton

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,16 +16,29 @@
 ::-webkit-scrollbar { 
   display: none; 
 }
-
 html, body{
   width: 100%;
   background: $background;
   overscroll-behavior-y: contain;
 }
-.mdc-top-app-bar{
-  background: $content;
-}
 img{
   user-select: none;
   pointer-events: none;
+}
+.mdc-top-app-bar{
+  background: $content;
+}
+.mdc-icon-button{
+  &.use-custom-style{
+    transition: all .2s ease-in-out;
+    border-radius: 50%;
+    margin: 0 4px;
+    &:hover{
+      background: $content-hovered;
+    }
+    &:active{
+      background: $content-lightness;
+    }
+    background: $content;
+  }
 }
