--- a/src/styles/song.scss
+++ b/src/styles/song.scss
@@ -7,6 +7,7 @@
 }
 .song-list-wrapper{
     padding: 1rem 12px;
+    padding-bottom: 120px;
     width: 100%;
     max-width: 650px;
 }
@@ -30,10 +31,6 @@
 .s-category-item{
     width: 100%;
     height: 100%;
-    
-    padding: 12px 16px;
-
-    text-align: center;
 
     color: $color-light;
 
@@ -66,7 +63,8 @@
     background: $content;
     padding: 8px;
     border-radius: 12px;
-    border: 3px solid var(--mdc-theme-secondary);
+    // border: 2px solid var(--mdc-theme-secondary);
+    border: 2px solid transparent;
     align-items: center;
     transition: all .2s ease-in-out;
     cursor: pointer;
@@ -81,15 +79,33 @@
         background: $content-lightness;
     }
 }
-.s-item-cover{
-    margin-right: 12px;
+.s-item-cover-wrapper{
+    position: relative;
     height: 50px;
     width: 50px;
+}
+.s-item-cover{
+    position: absolute;
+
+    width: 200%;
+    height: 200%;
+
+    right: 100%;
+    bottom: 100%;
+
+    transform: translate(50%, 50%);
+
     object-fit: cover;
     object-position: center;
-    border-radius: 6px;
+    border-radius: 16px;
+
+    box-shadow: 5px 5px 10px 3px $background;
+    // border: 2px solid var(--mdc-theme-secondary);
+    
+    transition: all .2s ease-in;
 }
 .s-item-data{
+    padding: 12px 16px;
 
 }
 .s-item-title{
