--- a/src/styles/song.scss
+++ b/src/styles/song.scss
@@ -58,6 +58,8 @@
     max-width: 650px;
 }
 .s-item-wrapper{
+    margin: 4rem 0;
+    position: relative;
     width: 100%;
     display: flex;
     background: $content;
@@ -78,22 +80,42 @@
         color: $color-light;
         background: $content-lightness;
     }
+    &::after{
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        width: 5px;
+        height: 10px;
+        background: red;
+        transform: translateX(-4px);
+    }
+    &::before{
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        width: 5px;
+        height: 10px;
+        background: blue;
+        transform: translateX(-16px);
+    }
 }
 .s-item-cover-wrapper{
     position: relative;
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
 }
 .s-item-cover{
     position: absolute;
 
-    width: 200%;
-    height: 200%;
+    width: 150%;
+    height: 150%;
 
-    right: 100%;
-    bottom: 100%;
+    left: 0;
+    top: 0;
 
-    transform: translate(50%, 50%);
+    transform: translate(-50%, -50%);
 
     object-fit: cover;
     object-position: center;
@@ -106,11 +128,20 @@
 }
 .s-item-data{
     padding: 12px 16px;
-
 }
 .s-item-title{
     color: $color;
 }
 .s-item-description{
     color: $color-light;
+}
+.s-item-button-play{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    transform: translate(15%, 15%);
+    display: flex;
+    align-items: center;
+    border-radius: 50%;
+    background: var(--mdc-theme-secondary);
 }
