state manager added do home

--- a/src/styles/song.scss
+++ b/src/styles/song.scss
@@ -50,7 +50,7 @@
 }
 
 .s-general-actions{
-    padding: 1rem 12px;
+    padding: 0 12px;
     padding-top: 2rem;
     display: flex;
     justify-content: flex-end;
