--- a/src/styles/song.scss
+++ b/src/styles/song.scss
@@ -73,11 +73,18 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    transform: translate(15%, 15%);
+
     display: flex;
     align-items: center;
+
     border-radius: 50%;
     transition: all .2s ease-in-out;
+
+    will-change: transform;
+
+    transform: rotate(0deg) translate(15%, 15%);
+
+    background: var(--before-background);
 }
 .s-item-cover{
     position: absolute;
@@ -120,37 +127,40 @@
     &:active{
         background: $content-lightness;
     }
+
+    &::after, &::before{
+        will-change: height, background;
+    }
+
     &:not(.s-item-wrapper-selected){
         &:hover{
             .s-item-span{
                 width: 100%;
                 border-radius: 12px;
             }
+            .s-item-button-play{
+                transform: translate(15%, calc(15% + 2px));
+                background: var(--before-background);
+            }
         }
-        &::after{
+        &::after, &::before{
             transition: all .1s ease-in;
             content: "";
             position: absolute;
             bottom: 0;
             left: 70%;
             width: 5px;
+
+        }
+        &::after{
             height: var(--after-height);
             background: var(--after-background);
             transform: translateX(-4px);
         }
         &::before{
-            transition: all .1s ease-in;
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 70%;
-            width: 5px;
             height: var(--before-height);
             background: var(--before-background);
             transform: translateX(-16px);
-        }
-        .s-item-button-play{
-            background: var(--before-background);
         }
         .s-item-cover{
             border: 2px solid transparent;
