--- a/src/styles/song.scss
+++ b/src/styles/song.scss
@@ -66,8 +66,11 @@
     height: 100%;
     background: rgba(66, 69, 73, 0.5);
     border-bottom: 2px solid var(--after-background);
-    transform: translateY(2px);
-    border-radius: 0;
+    border-radius: 12px;
+    width: 100%;
+    opacity: 0;
+    transform: translate(-3px, -3px);
+    will-change: opacity, transform;
 }
 .s-item-button-play{
     position: absolute;
@@ -83,6 +86,8 @@
     will-change: transform;
 
     transform: rotate(0deg) translate(15%, 15%);
+
+    box-shadow: -2px -2px 5px 1px $background;
 
     background: var(--before-background);
 }
@@ -135,8 +140,8 @@
     &:not(.s-item-wrapper-selected){
         &:hover{
             .s-item-span{
-                width: 100%;
-                border-radius: 12px;
+                transform: translate(3px, 3px);
+                opacity: 1;
             }
             .s-item-button-play{
                 transform: translate(15%, calc(15% + 2px));
