--- a/src/styles/song.scss
+++ b/src/styles/song.scss
@@ -91,27 +91,36 @@
 
     background: var(--before-background);
 }
+.s-item-cover-wrapper{
+    position: relative;
+    height: 70px;
+    width: 70px;
+    overflow: hidden;
+    box-shadow: 5px 5px 10px 3px $background;
+    border-radius: 16px;
+}
 .s-item-cover{
     position: absolute;
 
-    width: 150%;
-    height: 150%;
+    width: 100%;
+    height: 100%;
 
     left: 0;
     top: 0;
 
-    transform: translate(-50%, -50%);
+    transform: scale(1);
 
     object-fit: cover;
     object-position: center;
     border-radius: 16px;
 
-    box-shadow: 5px 5px 10px 3px $background;
+    will-change: transform;
+
     
-    transition: all .2s ease-in;
+    transition: all .3s ease-in;
 }
 .s-item-wrapper{
-    margin: 4rem 0;
+    margin: 1rem 0;
     position: relative;
     width: 100%;
     display: flex;
@@ -131,6 +140,15 @@
 
     &:active{
         background: $content-lightness;
+    }
+    &:hover{
+        .s-item-cover-wrapper{
+            border: 2px solid transparent;
+            .s-item-cover{
+                transform: scale(1.1);
+            }
+        }
+
     }
 
     &::after, &::before{
@@ -202,11 +220,6 @@
             border: 2px solid var(--mdc-theme-secondary);
         }
     }
-}
-.s-item-cover-wrapper{
-    position: relative;
-    height: 60px;
-    width: 60px;
 }
 .s-item-data{
     padding: 12px 16px;
