--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -9,6 +9,7 @@
     left: 0;
     right: 0;
     background: $content;
+    box-shadow: -1px -5px 10px 5px $background;
     transition: all .2s ease-in-out;
     &.collapsed{
         height: 59px;
@@ -137,6 +138,7 @@
 .p-expanded-top-bar-wrapper{
     width: 100%;
     background: $content;
+    box-shadow: 2px 2px 5px 1px $background;
 
     display: flex;
     justify-content: center;
