--- a/src/scss/_canvaLayers.scss
+++ b/src/scss/_canvaLayers.scss
@@ -1,4 +1,16 @@
-.audio-layer-1 {
+.layers-wrapper {
+  z-index: 10;
+
+  position: fixed;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+}
+
+.background-layer {
   position: fixed;
 
   top: 0;
@@ -7,7 +19,22 @@
   width: 100%;
   height: 100%;
 
-  background: red;
+  z-index: 5;
+
+  object-fit: cover;
+  object-position: center;
+
+  opacity: 0.3;
+}
+
+.canvas-layer {
+  position: fixed;
+
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 50%;
 
   z-index: 10;
 }
